--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -1,5 +1,5 @@
 = stackgres-operator
 
-stackgres-operator is a Commodore component to manage stackgres-operator.
+stackgres-operator is a Commodore component to manage Stackgres Operator.
 
 See the xref:references/parameters.adoc[parameters] reference for further details.
