Add option to define namespace labels and annotations
This gives us some flexibilty and can be helpful in multiple situations.
The main usecase currently is that we can schedule stackgres on infra
nodes on OpenShift using the annotation `openshift.io/node-selector`

--- a/docs/modules/ROOT/pages/references/parameters.adoc
+++ b/docs/modules/ROOT/pages/references/parameters.adoc
@@ -10,6 +10,23 @@ default:: `syn-stackgres-operator`
 
 The namespace in which to deploy this component.
 
+
+== `namespaceLabels`
+
+[horizontal]
+type:: dict
+default:: `{}`
+
+Additional labels to add to the created namespace.
+
+== `namespaceAnnotations`
+
+[horizontal]
+type:: dict
+default:: `{}`
+
+Additional annotations to add to the created namespace.
+
 == `helmValues`
 
 [horizontal]
